--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <!--    
     <script src="script_1.js"></script>   -->
 
-    <script src="practice.js"></script>
+    <script src="script_9.js"></script>
   </body>
 </html>
