--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <title>Document</title>
   </head>
   <body>
+    <h1>Learning JavaScript 😊</h1>
+    <button id="clickMe">Click Me</button>
+
     <!--    
     <script src="script_1.js"></script>   -->
 
-    <script src="practiceDay7.js"></script>
+    <script src="script_12.js"></script>
   </body>
 </html>
