--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <h1>Learning JavaScript 😊</h1>
     <button id="clickMe">Click Me</button>
+    <button id="submit">Submit</button>
 
     <!--    
     <script src="script_1.js"></script>   -->
