--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <!--    
     <script src="script_1.js"></script>   -->
 
-    <script src="script_12.js"></script>
+    <script src="practiceDay8.js"></script>
   </body>
 </html>
