--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <button id="submit">Submit</button>
 
     <!--    
-    <script src="script_1.js"></script>   -->
+    <script src="script_1.js"></script>
+    -->
 
     <script src="practiceDay9.js"></script>
   </body>
