--- a/onClick.html
+++ b/onClick.html
@@ -7,7 +7,7 @@
     <title>OnClick</title>
   </head>
   <body>
-    <button onclick="submitHandler()" id="count">0</button><br /><br />
+    <button id="count" type="button">0</button>
     <script src="onClick.js"></script>
   </body>
 </html>
