--- a/calculator.html
+++ b/calculator.html
@@ -10,9 +10,28 @@
   <body>
     <div class="container">
       <div class="calculator dark">
-        <div class="theme-toggler active">
+        <!--  <div class="theme-toggler active">
           <i class="toggler-icon"></i>
+        </div>  -->
+
+        <!--
+        <input type="checkbox" class="checkbox" id="darkmode-toggle" />
+        <label for="darkmode-toggle"></label>
+        ---->
+
+        <div class="wrapper">
+          <div class="toggle">
+            <input class="toggle-input" type="checkbox" />
+            <div class="toggle-bg"></div>
+            <div class="toggle-switch">
+              <div class="toggle-switch-figure"></div>
+              <div class="toggle-switch-figureAlt"></div>
+            </div>
+          </div>
         </div>
+
+        <!-- -->
+
         <div class="display-screen">
           <div id="display"></div>
         </div>
