--- a/calculator.html
+++ b/calculator.html
@@ -10,15 +10,6 @@
   <body>
     <div class="container">
       <div class="calculator dark">
-        <!--  <div class="theme-toggler active">
-          <i class="toggler-icon"></i>
-        </div>  -->
-
-        <!--
-        <input type="checkbox" class="checkbox" id="darkmode-toggle" />
-        <label for="darkmode-toggle"></label>
-        ---->
-
         <div class="wrapper">
           <div class="toggle">
             <input class="toggle-input" type="checkbox" />
@@ -29,8 +20,6 @@
             </div>
           </div>
         </div>
-
-        <!-- -->
 
         <div class="display-screen">
           <div id="display"></div>
@@ -63,7 +52,7 @@
               <td><button class="btn-operator" id="+">+</button></td>
             </tr>
             <tr>
-              <td><button class="btn-operator" id="point">&period;</button></td>
+              <td><button class="btn-operator" id=".">&period;</button></td>
               <td><button class="btn-number" id="0">0</button></td>
               <td><button class="btn-operator" id="(">&lpar;</button></td>
               <td><button class="btn-operator" id=")">&rpar;</button></td>
