--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <script src="script_1.js"></script>
     -->
 
-    <script src="test.js"></script>
+    <script src="binarySearch.js"></script>
   </body>
 </html>
