--- a/allInOne.html
+++ b/allInOne.html
@@ -7,6 +7,6 @@
     <title>All In One</title>
   </head>
   <body>
-    <script src="binarySearch.js"></script>
+    <script src="linearSearch.js"></script>
   </body>
 </html>
