bubble Sort || lucky Seven || sum Of Several Arrays

--- a/allInOne.html
+++ b/allInOne.html
@@ -7,6 +7,8 @@
     <title>All In One</title>
   </head>
   <body>
-    <script src="linearSearch.js"></script>
+    <h1>👻 All Js file will connected with this HTML file 👻</h1>
+
+    <script src="sumOfSeveralArrays.js"></script>
   </body>
 </html>
