--- a/allInOne.html
+++ b/allInOne.html
@@ -9,6 +9,6 @@
   <body>
     <h1>👻 All Js file will connected with this HTML file 👻</h1>
 
-    <script src="sumOfSeveralArrays.js"></script>
+    <script src="script_8.js"></script>
   </body>
 </html>
