find the array index

--- a/CodingForCampusing/index.html
+++ b/CodingForCampusing/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Coding For Campusing 😁✌🏻😁</title>
+    <title>Coding</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Coding Practice For Campusing 😁✌🏻😁</h1>
+    </header>
+    <script src="FindTheArrayIndex.js"></script>
+  </body>
 </html>
