linear search & binary search

--- a/CodingForCampusing/index.html
+++ b/CodingForCampusing/index.html
@@ -9,6 +9,6 @@
     <header>
       <h1>Coding Practice For Campusing 😁✌🏻😁</h1>
     </header>
-    <script src="Merge_2_Arrays_&_Remove_Duplicate_Items.js"></script>
+    <script src="binarySearch.js"></script>
   </body>
 </html>
