--- a/CodingForCampusing/index.html
+++ b/CodingForCampusing/index.html
@@ -9,6 +9,6 @@
     <header>
       <h1>Coding Practice For Campusing 😁✌🏻😁</h1>
     </header>
-    <script src="Create_an_object_from_two_arrays.js"></script>
+    <script src="ArraysToSwapVariables.js"></script>
   </body>
 </html>
