product of array except self

--- a/CodingForCampusing/index.html
+++ b/CodingForCampusing/index.html
@@ -9,6 +9,6 @@
     <header>
       <h1>Coding Practice For Campusing 😁✌🏻😁</h1>
     </header>
-    <script src="Top_K_Frequent_Elements,js"></script>
+    <script src="Product_of_Array_Except_Self.js"></script>
   </body>
 </html>
