--- a/CodingForCampusing/index.html
+++ b/CodingForCampusing/index.html
@@ -9,6 +9,6 @@
     <header>
       <h1>Coding Practice For Campusing 😁✌🏻😁</h1>
     </header>
-    <script src="Valid_Palindrome.js"></script>
+    <script src="Valid_Parentheses.js"></script>
   </body>
 </html>
