--- a/CodingForCampusing/index.html
+++ b/CodingForCampusing/index.html
@@ -9,6 +9,7 @@
     <header>
       <h1>Coding Practice For Campusing 😁✌🏻😁</h1>
     </header>
+    <!--  feature.js  -->
     <button onclick="display()" style="background: rgb(160, 187, 244)">
       Click Me
     </button>
